{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 11,
  "lineage": "d13a5c9f-c93e-8124-0a69-2c1216e1e6e1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx-servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "alb-subnet-a",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09ee0944866c73f62",
            "arn": "arn:aws:ec2:eu-west-2:118597682037:instance/i-0355d2218be76c717",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0355d2218be76c717",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "London02",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b8fa2e10ae724ccb",
            "private_dns": "ip-10-28-0-166.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.28.0.166",
            "public_dns": "ec2-35-176-33-125.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.176.33.125",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e8235143100ddda5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aed59fe7dfa8562c",
            "tags": {
              "Name": "nginx-server-a"
            },
            "tags_all": {
              "Name": "nginx-server-a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ec8044a89803d4d9"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2-alb-acess",
            "aws_subnet.alb-subnets",
            "aws_vpc.nginx-vpc"
          ]
        },
        {
          "index_key": "alb-subnet-b",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09ee0944866c73f62",
            "arn": "arn:aws:ec2:eu-west-2:118597682037:instance/i-04149e1f5258e5d6f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04149e1f5258e5d6f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "London02",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07d64dc0e2f3d58bd",
            "private_dns": "ip-10-28-5-100.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.28.5.100",
            "public_dns": "ec2-18-134-210-236.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.134.210.236",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0959deb55dd9c442e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0915076800f06bcc5",
            "tags": {
              "Name": "nginx-server-b"
            },
            "tags_all": {
              "Name": "nginx-server-b"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ec8044a89803d4d9"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2-alb-acess",
            "aws_subnet.alb-subnets",
            "aws_vpc.nginx-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "alb-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:118597682037:internet-gateway/igw-096ebc5931898f993",
            "id": "igw-096ebc5931898f993",
            "owner_id": "118597682037",
            "vpc_id": "vpc-00ce04cc7db208a00"
          },
          "dependencies": [
            "aws_vpc.nginx-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "alb-rt-main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:118597682037:route-table/rtb-05a3b7842db7f6e80",
            "id": "rtb-05a3b7842db7f6e80",
            "owner_id": "118597682037",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-096ebc5931898f993",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "alb-public-rt"
            },
            "tags_all": {
              "Name": "alb-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ce04cc7db208a00"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.alb-igw",
            "aws_vpc.nginx-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "alb-rt-subnets-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "alb-subnet-a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d695b4454e3adde9",
            "route_table_id": "rtb-05a3b7842db7f6e80",
            "subnet_id": "subnet-0aed59fe7dfa8562c"
          },
          "dependencies": [
            "aws_internet_gateway.alb-igw",
            "aws_route_table.alb-rt-main",
            "aws_subnet.alb-subnets",
            "aws_vpc.nginx-vpc"
          ]
        },
        {
          "index_key": "alb-subnet-b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b936e98b0d25d65a",
            "route_table_id": "rtb-05a3b7842db7f6e80",
            "subnet_id": "subnet-0915076800f06bcc5"
          },
          "dependencies": [
            "aws_internet_gateway.alb-igw",
            "aws_route_table.alb-rt-main",
            "aws_subnet.alb-subnets",
            "aws_vpc.nginx-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-alb-acess",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:118597682037:security-group/sg-0ec8044a89803d4d9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ec8044a89803d4d9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230226235551775000000001",
            "name_prefix": "terraform-",
            "owner_id": "118597682037",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nginx-server-alb-sg"
            },
            "tags_all": {
              "Name": "nginx-server-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ce04cc7db208a00"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.nginx-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "alb-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "alb-subnet-a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:118597682037:subnet/subnet-0aed59fe7dfa8562c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.28.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aed59fe7dfa8562c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "118597682037",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "alb-subnet-a"
            },
            "tags_all": {
              "Name": "alb-subnet-a"
            },
            "vpc_id": "vpc-00ce04cc7db208a00"
          },
          "dependencies": [
            "aws_vpc.nginx-vpc"
          ]
        },
        {
          "index_key": "alb-subnet-b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:118597682037:subnet/subnet-0915076800f06bcc5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.28.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0915076800f06bcc5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "118597682037",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "alb-subnet-b"
            },
            "tags_all": {
              "Name": "alb-subnet-b"
            },
            "vpc_id": "vpc-00ce04cc7db208a00"
          },
          "dependencies": [
            "aws_vpc.nginx-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "nginx-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:118597682037:vpc/vpc-00ce04cc7db208a00",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.28.0.0/16",
            "default_network_acl_id": "acl-0d6a8166346e1b67a",
            "default_route_table_id": "rtb-0e3266c3aa938b0b3",
            "default_security_group_id": "sg-0841ec34f509d4a21",
            "dhcp_options_id": "dopt-0c70f9c80424db9eb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00ce04cc7db208a00",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e3266c3aa938b0b3",
            "owner_id": "118597682037",
            "tags": {
              "Name": "alb-vpc-Nginx"
            },
            "tags_all": {
              "Name": "alb-vpc-Nginx"
            }
          }
        }
      ]
    }
  ]
}